--- a/webdangkithanhcong.html
+++ b/webdangkithanhcong.html
@@ -18,7 +18,7 @@
       </p>
       <p>
         Đăng ký lại khoá học tại đây:
-        <a href="./webdangkikhoahoc.html"
+        <a href="./index.html"
           ><input type="submit" value="Đăng ký lại"
         /></a>
       </p>
